--- a/challenge_4/public/styles.css
+++ b/challenge_4/public/styles.css
@@ -5,7 +5,7 @@ span {
   display:inline-block;
   width:80px;
   height:80px;
-  background:white;
+  background:#f0efef;
   border-radius:50%;
 }
 
